<resources>
    <string name="app_name">Lista De Contactos</string>
    <string name="add">Adicionar Contacto</string>
    <string name="nome">Nome*</string>
    <string name="apelido">Apelido*</string>
    <string name="numero">Número*</string>
    <string name="cancelar">Cancelar</string>
    <string name="editar">Editar</string>
    <string name="remover">Remover</string>
    <string name="certeza">Tem a certeza que pretende remover o contacto ?</string>
    <string name="confirmar">Confirmar</string>
    <string name="ver">Ver Contacto</string>
    <string name="voltar">Voltar</string>
    <string name="editarcontacto">Editar Contacto</string>
    <string name="morada">Morada*</string>
    <string name="idade">Idade*</string>
    <string name="alertapreenche">Preencha todos os campos !</string>
    <string name="user">Utilizador</string>
    <string name="registar">Registar</string>
    <string name="preencheloginuser">Preencha o campo username</string>
    <string name="preencheloginpass">Preencha o campo password</string>
    <string name="confirmarpassword">Confirmar password</string>
    <string name="introduzapassword">Introduza novamente a password</string>
    <string name="loginerro">Username ou password errados</string>
    <string name="lembraruser">Lembrar Utilizador</string>
    <string name="confirmalogout">Tem a certeza que pretende fazer Logout ?</string>
    <string name="usernamelong">Username muito comprido</string>
    <string name="passinvalida">A password tem de conter pelo menos 1 número, 1 minúscula, e 6 caracteres</string>
    <string name="emailinvalido">Introduza um email válido</string>
    <string name="userexiste">Username já existente</string>
    <string name="ordenacriacao">Ordenar por criação</string>
    <string name="ordenanome">Ordenar por nome</string>
    <string name="ordernaridade">Ordenar por idade</string>
    <string name="confirmapassworderro">A password não coincide</string>
</resources>
