<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">


        <EditText
            android:id="@+id/edit_nome"
            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"/>

        <EditText
            android:id="@+id/edit_apelido"
            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apelido"/>

        <EditText
            android:id="@+id/edit_numero"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero"/>

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email*"/>

        <EditText
            android:id="@+id/edit_morada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/morada"/>

        <EditText
            android:id="@+id/edit_idade"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/idade"/>




    </LinearLayout>
</RelativeLayout>